# jetson-multimedia-api

./: CMakeLists.txt  README.md
cmake/: FindNVMMAPI.cmake
